[gd_scene load_steps=20 format=2]

[ext_resource path="res://asset/UI/button/quit_btn.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://asset/UI/button/credit_btn.png" type="Texture" id=3]
[ext_resource path="res://asset/UI/MainMenu/background.png" type="Texture" id=4]
[ext_resource path="res://asset/UI/MainMenu/logo_ninja_rusher.png" type="Texture" id=5]
[ext_resource path="res://asset/UI/MainMenu/player.png" type="Texture" id=6]
[ext_resource path="res://asset/UI/button/arcade_btn.png" type="Texture" id=7]
[ext_resource path="res://asset/UI/button/adventure_btn.png" type="Texture" id=8]
[ext_resource path="res://asset/UI/button/share_btn.png" type="Texture" id=9]
[ext_resource path="res://src/Ads/AdsenseMobile.tscn" type="PackedScene" id=10]
[ext_resource path="res://asset/UI/button/settings_btn.png" type="Texture" id=11]
[ext_resource path="res://asset/UI/button/admob_btn.png" type="Texture" id=12]
[ext_resource path="res://asset/UI/button/admob_click.png" type="Texture" id=13]
[ext_resource path="res://asset/UI/button/share_click.png" type="Texture" id=14]
[ext_resource path="res://asset/UI/button/credit_click.png" type="Texture" id=15]
[ext_resource path="res://asset/UI/button/adventure_click.png" type="Texture" id=16]
[ext_resource path="res://asset/UI/button/arcade_click.png" type="Texture" id=17]
[ext_resource path="res://asset/UI/button/settings_click.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "_start"
length = 2.0
loop = true

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.0
margin_top = 27.8344
margin_right = 114.0
margin_bottom = 178.834
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLogo" type="TextureRect" parent="Background"]
margin_left = 15.0
margin_top = 15.0
margin_right = 203.485
margin_bottom = 214.983
rect_rotation = 3.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLogo2" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -209.478
margin_top = 15.0
margin_right = -15.0
margin_bottom = 219.478
rect_rotation = -3.0
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -44.5548
margin_right = 57.5
margin_bottom = 94.4452
rect_min_size = Vector2( 111, 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adventure" type="TextureButton" parent="Background/VBoxContainer"]
margin_right = 115.0
margin_bottom = 45.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arcade" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 49.0
margin_right = 115.0
margin_bottom = 94.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 17 )

[node name="Settings" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 98.0
margin_right = 115.0
margin_bottom = 143.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 18 )

[node name="Quit" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 147.0
margin_right = 115.0
margin_bottom = 192.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 18 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -53.909
margin_right = 400.0
margin_bottom = -8.909
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="TextureButton" parent="Background/HBoxContainer"]
margin_right = 374.0
margin_bottom = 45.0
size_flags_horizontal = 15
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Admob" type="TextureButton" parent="Background/HBoxContainer"]
margin_left = 378.0
margin_right = 752.0
margin_bottom = 45.0
size_flags_horizontal = 3
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="Share" type="TextureButton" parent="Background/HBoxContainer"]
margin_left = 756.0
margin_right = 800.0
margin_bottom = 45.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "_start"
anims/_start = SubResource( 1 )

[node name="AdsenseMobile" parent="." instance=ExtResource( 10 )]
[connection signal="pressed" from="Background/VBoxContainer/Adventure" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/Credit" to="." method="_on_Credit_pressed"]
[connection signal="gui_input" from="Background/HBoxContainer/Admob" to="." method="_on_Admob_gui_input"]
[connection signal="pressed" from="Background/HBoxContainer/Share" to="." method="_on_Share_pressed"]
